--- a/exercicios/ex023/index.html
+++ b/exercicios/ex023/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astronauta</title>
+    <title>Alinhamento vertical</title>
+    <style>
+        #conteiner{
+        background-color: black;
+        background-image: url(imagens/espaco.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+        padding: 1px;
+        height: 97vh;
+        }
+        #conteudo{
+        height: 15vh;
+        width: 15vh;
+        background-image: url(imagens/astronauta.png);
+        background-position: center center;
+        background-size: 100% 100%;
+        position: absolute;
+
+        top: 50%;
+        left: 50%;
+
+        transform: translate(-50%, -50%);
+        }
+    </style>
 </head>
 <body>
-    
+    <div id="conteiner">
+        <div id="conteudo">
+
+        </div>
+    </div>
 </body>
 </html>
