--- a/praticando/p001/index.html
+++ b/praticando/p001/index.html
@@ -26,7 +26,7 @@
             padding-top: 15px;
             margin:10px;
             text-shadow: 2px 2px 2px rgba(56, 1, 56, 0.795);
-            font-size: 3em;
+            font-size: 4.3vw;
         }
         header > p{
             text-align: center;
