--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -48,6 +48,7 @@
             background-attachment: fixed;
             position: relative;
             height: 620px;
+            width: 100%;
         }
         section#img2{
             background-image: url(pacote-d012/imagens/background002.jpg);
@@ -56,6 +57,7 @@
             background-attachment: fixed;
             position: relative;
             height: 620px;
+            width: 100%;
         }
         section.imagem{
             box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.274);
