--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -9,6 +9,7 @@
         body{
             margin: 0px;
             padding: 0px;
+            width: 100%;
         }
         header{
             height: 40vh;
@@ -66,14 +67,15 @@
             color: white;
             background-color: rgba(0, 0, 0, 0.562);
             padding: 2px 2px 2px 10px;
-            margin-left: 15px;
+            margin: 0px 0px 0px 15px;
+            
             width: 650px;
             position: absolute;
-            font-size: 3.5vw;
+            font-size: 3.6vw;
             
 
             left: 1.5%;
-            top: 3%;
+            top: 4%;
         }
         footer{
             background-color: black;
