--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -37,6 +37,9 @@
             text-decoration: underline;
             transition-duration: 2s;
         }
+        section{
+            width: 100%;
+        }
         section > p{
             line-height: 2em;
             padding-left: 20px;
