--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -51,7 +51,7 @@
             background-size: 100% 100%;
             background-attachment: fixed;
             position: relative;
-            height: 620px;
+            height: 100vh;
 
         }
         section#img2{
@@ -60,7 +60,7 @@
             background-size: 100% 100%;
             background-attachment: fixed;
             position: relative;
-            height: 620px;
+            height: 100vh;
             
         }
         section.imagem{
@@ -97,7 +97,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a> V 1.1</p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a> V 1.2</p>
     </header>
     <main>
         <section>
