--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -61,7 +61,7 @@
             background-size: 100% 100%;
             background-attachment: fixed;
             position: relative;
-            height: 100vh;
+            height: 60vw;
             
         }
         section.imagem{
