--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -12,7 +12,7 @@
             width: 100%;
         }
         header{
-            height: 40vh;
+            height: 35vh;
             background-color: black;
             text-align: center;
             color: white;
@@ -38,11 +38,12 @@
             transition-duration: 2s;
         }
         section{
-            width: 100%;
+            width: 100vw;
         }
         section > p{
             line-height: 2em;
             padding-left: 20px;
+            padding-bottom: 20px;
             font-size: 4vw;
         }
         section#img1{
@@ -50,17 +51,19 @@
             background-repeat: no-repeat;
             background-size: 100% 100%;
             background-attachment: fixed;
+            background-position: left center;
             position: relative;
-            height: 60vw;
+            height: 55vw;
             
 
         }
         section#img2{
             background-image: url(pacote-d012/imagens/background002.jpg);
             background-repeat: no-repeat;
-            background-size: 100% 100%;
+            background-size: 150% 150%;
             background-attachment: fixed;
             position: relative;
+            background-position: left center;
             height: 60vw;
             
         }
@@ -98,7 +101,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a> V 1.3</p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a> V 1.4</p>
     </header>
     <main>
         <section>
