--- a/desafios/d013/pacote-d013/tabela05.html
+++ b/desafios/d013/pacote-d013/tabela05.html
@@ -22,11 +22,21 @@
             padding: 8px;
             border: 1px solid black;
         }
+        .cnome{
+            background-color: rgb(22, 172, 172);
+            
+        }
     </style>
 </head>
 <body>
     <h1>Exercício de tabela</h1>
     <table>
+        <colgroup>
+            <col class="cnome">
+            <col class="csexo">
+            <col class="cidade">
+            <col class="cprof">
+        </colgroup>
         <caption>
             Cadastro
         </caption>
