--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        body{
+            background-color: white;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de um Iframe</h1>
@@ -14,7 +19,7 @@
     
     </a>para aprender a programar</p>
     <p>Alguns sites possuem proteção contra exibição de seu conteúdo em iframes, tipo o Google:</p>
-    <iframe src="https://www.google.com.br" frameborder="0"></iframe>
+    <iframe src="https://www.google.com.br" frameborder="0" scolling=""></iframe>
 
     <p>Já o repositório do Guanabara é muito legal, veja:</p>
     <iframe src="https://gustavoguanabara.github.io" frameborder="0"></iframe>
