--- a/exercicios/ex024/paginas-extras/pag01.html
+++ b/exercicios/ex024/paginas-extras/pag01.html
@@ -37,7 +37,7 @@
 <body>
     <h1>Esse é um teste para iframe local</h1>
 
-    <iframe src="iframe001.html" frameborder="0"></iframe>
+    <iframe src="../iframe001.html" frameborder="0"></iframe>
 
     <table>
         <colgroup>
