--- a/exercicios/ex024/paginas-extras/pag01.html
+++ b/exercicios/ex024/paginas-extras/pag01.html
@@ -7,7 +7,7 @@
     <title>Página de teste</title>
     <style>
         body{
-            background-color: blue;
+            background-color: rgba(0, 0, 255, 0.190);
             color: white;
             font-family: Arial, Helvetica, sans-serif;
         }
