--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum impedit quibusdam saepe, consequatur velit officia inventore minima atque, harum iure, eaque deleniti mollitia a aliquid quos quasi ullam doloremque quia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita culpa, a consequatur at aliquid animi libero quaerat voluptate dicta iusto explicabo esse doloribus quos, itaque reprehenderit quas tenetur dolorem atque.</p>
 
-    <iframe src="" id="tela" name="frame" >
+    <iframe src="" id="tela" name="frame" srcdoc="<img src='imagens/img01.png'>">
         <p>Infelizmente seu navegador não é compatível</p>
     </iframe>
 
