--- a/praticando/p002/index.html
+++ b/praticando/p002/index.html
@@ -23,10 +23,15 @@
                 <li><a href="paginas-extras/pag03.html" target="frame">Terceira página</a></li>
             </ol>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, expedita aperiam. Totam omnis et ab provident quaerat, a quos, dicta itaque deleniti voluptas sit, voluptatibus explicabo porro nam aliquid exercitationem.</p>
-            <iframe src="" name="frame"></iframe>
+            <iframe srcdoc="<img src='imagens/img01.jpg'>" name="frame"></iframe>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel nemo iusto illo aspernatur facilis possimus porro. Minus alias obcaecati nostrum fuga dolorem iure nobis et quia voluptate, iste voluptatibus. Autem.</p>
         </section>
 
     </main>
+    <footer>
+
+        <p>Site criado por <strong><a href="#">Lucca Carrion</a></strong></p>
+        
+    </footer>
 </body>
 </html>
