--- a/praticando/p001/index.html
+++ b/praticando/p001/index.html
@@ -14,6 +14,10 @@
         src: url('fontes/BebasNeue-Regular.ttf');
        }
       
+       *{
+        margin: 0px;
+        padding: 0px;
+       }
        
         header{
             height: 125px;
@@ -23,8 +27,7 @@
             font-family: 'Silkscreen', cursive;
             color: white;
             text-align: center;
-            padding-top: 15px;
-            margin:10px;
+            padding-top: 5px;
             text-shadow: 2px 2px 2px rgba(56, 1, 56, 0.795);
             font-size: 4.3vw;
         }
