--- a/praticando/p003/paginas-extra/facebook.html
+++ b/praticando/p003/paginas-extra/facebook.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Facebook</title>
     <link rel="stylesheet" href="../estilo/social.css">
     <style>
         body{
-            background-image: url(../imagens/tela-home.jpg);
+            background-image: url(../imagens/tela-facebook.jpg);
         }
-
     </style>
 </head>
 <body>
-    
+    <a href="https://www.facebook.com.br" target="_blank" rel="external">ACESSE</a>
 </body>
 </html>
