--- a/praticando/p004/index.html
+++ b/praticando/p004/index.html
@@ -57,7 +57,7 @@
             padding: 10px;
         }
         section#redes-sociais > a > img{
-            width: 75px;
+            width: 5vw;
             border-radius: 50%;
             box-sizing: border-box;
 
