--- a/praticando/p004/paginas-extras/instagram.html
+++ b/praticando/p004/paginas-extras/instagram.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="../imagens/instagram/instagram-tela.jpeg" alt="tela instagram">
-    <a href="https://www.instagram.com/luccarrion/">Acesse</a>
+    <a href="https://www.instagram.com/luccarrion/" target="_blank">Acesse</a>
 </body>
 </html>
