--- a/praticando/p005/index.html
+++ b/praticando/p005/index.html
@@ -187,5 +187,8 @@
             </form>
         </section>
     </main>
+    <footer>
+        <p>Site feito por <strong>Lucca Carrion</strong></p>
+    </footer>
 </body>
 </html>
