--- a/praticando/p005/index.html
+++ b/praticando/p005/index.html
@@ -16,9 +16,9 @@
             Esse será o site em que você realizará um cadastro
         </p>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">Sobre</a>
-            <a href="#">Projetos</a>
+            <a href="index.html">Home</a>
+            <a href="https://github.com/Luccarrion/Luccarrion" target="_blank" rel="external">Sobre</a>
+            <a href="https://github.com/Luccarrion/html-css/tree/main/praticando" target="_blank" rel="external">Projetos</a>
         </nav>
     </header>
     <main>
@@ -64,7 +64,7 @@
                     <article>
                         <h1>Gostos</h1>
                         <fieldset>
-                            <legend>Comidas</legend>
+                            <legend class="label">Comidas</legend>
                             <div>
                                 <label for="icompas">Pastel</label><input type="checkbox" name="compas" id="icompas">
                                 <label for="icomham">Hamburguer</label><input type="checkbox" name="comham" id="icomham">
@@ -86,7 +86,7 @@
                         
                         </fieldset>
                         <fieldset>
-                            <legend>Sua <strong>cor</strong> favorita</legend>
+                            <legend class="label">Sua <strong>cor</strong> favorita</legend>
                             <label for="icor">Cor: </label><input type="color" name="cor" id="icor">
                             <br>
                             <p>De 0 a 10, o quão você gosta dessa cor?</p>
@@ -97,7 +97,7 @@
 
                     <article>
                         <fieldset>
-                            <legend>Músicas</legend>
+                            <legend class="label">Músicas</legend>
                         
                             <p>Qual o seu <strong>cantor</strong> favorito?</p>
                             <select>
@@ -175,7 +175,7 @@
 
     </main>
     <footer>
-        <p>Site feito por <strong>Lucca Carrion</strong></p>
+        <p>Site feito por <strong><a href="https://github.com/luccarrion" target="_blank" rel="author">Lucca Carrion</a></strong></p>
     </footer>
 </body>
 </html>
