--- a/praticando/p006/index.html
+++ b/praticando/p006/index.html
@@ -10,14 +10,14 @@
 <body>
     <div class="bloco1">
         <h1>Seja bem-vindo</h1>
-        <p>Realize login para continuar</p>
+        <p>Realize <strong style="color: purple;">login</strong> para continuar</p>
         <div class="bloco2">
             <form action="cadastro.php" method="post" autocomplete="on">
                  <div>
         
                     <label for="iuser">Username: </label><input type="text" name="user" class="login" id="iuser" placeholder="Usuário">
                     <br>
-                    <label for="ipass">Senha: </label><input type="password" name="pass" class="login" id="ipass" placeholder="Senha">
+                    <label for="ipass">Password: </label><input type="password" name="pass" class="login" id="ipass" placeholder="Senha">
         
                 </div>
 
