--- a/praticando/p006/index.html
+++ b/praticando/p006/index.html
@@ -18,6 +18,8 @@
                     <label for="iuser">Username: </label><input type="text" name="user" class="login" id="iuser" placeholder="Usuário">
                     <br>
                     <label for="ipass">Password: </label><input type="password" name="pass" class="login" id="ipass" placeholder="Senha">
+                    <br>
+                    <p class="cadastro">Ainda não tem login?? Então <a href="#">Cadastre-se</a></p>
         
                 </div>
 
