--- a/praticando/p007/index.html
+++ b/praticando/p007/index.html
@@ -49,6 +49,9 @@
         
     </form>
     </article>
+    <article class="planeta">
+        <img src="imagens/imagem-planeta.png" alt="imagem planeta">
+    </article>
     
 </body>
 </html>
