--- a/praticando/p007/index.html
+++ b/praticando/p007/index.html
@@ -57,7 +57,7 @@
         <img src="imagens/design-site.png" alt="imagem planeta">
     </article>
     <article class="assinatura">
-        <img src="imagens/assinatura-site.png" alt="assinatura">
+        <img src="imagens/assinatura site.png" alt="assinatura">
     </article>
 </body>
 </html>
