--- a/praticando/p007/paginas-extra/trabalhos.html
+++ b/praticando/p007/paginas-extra/trabalhos.html
@@ -10,7 +10,39 @@
 </head>
 <body>
     <main>
-        
+        <section class="areadetrabalho">
+            <h1>Área de trabalho</h1>
+            <div class="lista" id="praticando">
+                <h2>Praticando</h2>
+                <ul type="disc">
+                    <li>Praticando 01</li>
+                    <li>Praticando 02</li>
+                    <li>Praticando 03</li>                    
+                    <li>Praticando 04</li>
+                    <li>Praticando 05</li>
+                    <li>Praticando 06</li>                    
+                    <li>Praticando 07</li>                    
+                </ul>
+            </div>
+            <div class="lista" id="desafios">
+                <h2>Desafios</h2>
+                <ul type="disc">
+                    <li>Desafio 01</li>
+                    <li>Desafio 02</li>
+                    <li>Desafio 03</li>
+                    <li>Desafio 04</li>
+                    <li>Desafio 05</li>
+                    <li>Desafio 06</li>
+                    <li>Desafio 07</li>
+                    <li>Desafio 08</li>
+                    <li>Desafio 09</li>
+                    <li>Desafio 10</li>
+                    <li>Desafio 11</li>
+                    <li>Desafio 12</li>
+                    <li>Desafio 13</li>
+                </ul>               
+            </div>
+        </section>
     </main>
 </body>
 </html>
