--- a/praticando/p007/desafios-frame/desafios/d009/index.html
+++ b/praticando/p007/desafios-frame/desafios/d009/index.html
@@ -9,6 +9,10 @@
         body{
             background-color: rgb(85, 85, 85);
         }
+        ::-webkit-scrollbar{
+            width: 0px;
+            height: 0px;
+        }
     </style>
     <title>Meus vídeos</title>
 </head>
