--- a/praticando/p007/desafios-frame/desafios/d010/android.html
+++ b/praticando/p007/desafios-frame/desafios/d010/android.html
@@ -7,7 +7,12 @@
     <title>Como surgiu o mascote do andriod</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
-    
+    <style>
+        ::-webkit-scrollbar{
+            width: 0px;
+            height: 0px;
+        }
+    </style>
 </head>
 <body>
     <header>
