--- a/praticando/p007/desafios-frame/desafios/d012/feito/index.html
+++ b/praticando/p007/desafios-frame/desafios/d012/feito/index.html
@@ -10,6 +10,11 @@
             margin: 0px;
             padding: 0px;
             width: 100%;
+            background-color: white;
+        }
+        ::-webkit-scrollbar{
+            height: 0px;
+            width: 0px;
         }
         header{
             height: 35vh;
