--- a/praticando/p007/paginas-extra/trabalhos.html
+++ b/praticando/p007/paginas-extra/trabalhos.html
@@ -15,16 +15,16 @@
             <div class="lista" id="praticando">
                 <h2>Praticando</h2>
                 <ul type="disc">
-                    <li><a href=".../html-css/praticando/p001/index.html" target="frameprat">Praticando 01</a></li>
-                    <li><a href="/../html-css/praticando/p002/index.html" target="frameprat">Praticando 02</a></li>
-                    <li><a href="/../html-css/praticando/p003/index.html" target="frameprat">Praticando 03</a></li>                    
-                    <li><a href="/../html-css/praticando/p004/index.html" target="frameprat">Praticando 04</a></li>
-                    <li><a href="/../html-css/praticando/p005/index.html" target="frameprat">Praticando 05</a></li>
-                    <li><a href="/../html-css/praticando/p006/index.html" target="frameprat">Praticando 06</a></li>                    
-                    <li><a href="/../html-css/praticando/p007/index.html" target="frameprat">Praticando 07</a></li>                    
+                    <li><a href="../../p001/index.html" target="frameprat">Praticando 01</a></li>
+                    <li><a href="../../p002/index.html" target="frameprat">Praticando 02</a></li>
+                    <li><a href="../../p003/index.html" target="frameprat">Praticando 03</a></li>                    
+                    <li><a href="../../p004/index.html" target="frameprat">Praticando 04</a></li>
+                    <li><a href="../../p005/index.html" target="frameprat">Praticando 05</a></li>
+                    <li><a href="../../p006/index.html" target="frameprat">Praticando 06</a></li>                    
+                    <li><a href="../../p007/index.html" target="frameprat">Praticando 07</a></li>                    
                 </ul>
                 <aside class="iframe">
-                    <iframe src="../desafios-frame/desafios/d001/index.html" frameborder="0" name="frameprat"></iframe>
+                    <iframe src="" style="background-image: url(../imagens/Praticando.png); background-repeat: no-repeat; background-size: contain; background-color: var(--cor6);" frameborder="0" name="frameprat"></iframe>
                 </aside>   
             </div>
             <div class="lista" id="desafios">
@@ -42,10 +42,9 @@
                     <li><a href="../desafios-frame/desafios/d010/android.html" target="framedes">Desafio 10</a></li>
                     <li><a href="../desafios-frame/desafios/d011/index.html" target="framedes">Desafio 11</a></li>
                     <li><a href="../desafios-frame/desafios/d012/feito/index.html" target="framedes">Desafio 12</a></li>
-                    <li><a href="../desafios-frame/desafios/d013/" target="framedes">Desafio 13</a></li>
                 </ul>            
                 <aside class="iframe">
-                    <iframe src="../desafios-frame/desafios/d001/index.html" frameborder="0" name="framedes"></iframe>
+                    <iframe src="" frameborder="0" name="framedes" style="background-image: url(../imagens/Desafios.png); background-repeat: no-repeat; background-size: contain; background-color: var(--cor6);"></iframe>
                 </aside>   
             </div>
         </section>
