--- a/desafios/d001/index.html
+++ b/desafios/d001/index.html
@@ -10,6 +10,9 @@
             height: 0px;
             width: 0px;
         }
+        body{
+            background-color: white;
+        }
     </style>
 </head>
 <body>
