--- a/praticando/p001/index.html
+++ b/praticando/p001/index.html
@@ -18,7 +18,10 @@
         margin: 0px;
         padding: 0px;
        }
-       
+       ::-webkit-scrollbar{
+            width: 0px;
+            height: 0px;
+        }
         header{
             height: 125px;
             background-image: linear-gradient(to bottom, #8200d9c2, black);
