--- a/praticando/p004/index.html
+++ b/praticando/p004/index.html
@@ -14,6 +14,10 @@
             height: 100vh;
             width: 100vw;
         }
+        ::-webkit-scrollbar{
+            width: 0px;
+            height: 0px;
+        }
         body{
             font-family: Arial, Helvetica, sans-serif;
             background-image: url(imagens/fundo-amarelo.webp);
