--- a/praticando/p007/desafios-frame/desafios/d002/index.html
+++ b/praticando/p007/desafios-frame/desafios/d002/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icone/favicon.ico" type="image/x-icon">
     <title>Teste de ícone</title>
+    <style>
+        ::-webkit-scrollbar{
+            height: 0px;
+            width: 0px;
+        }
+        body{
+            background-color: white;
+        }
+    </style>
 </head>
 <body>
     <h1>Ícone Favicon!!!</h1>
