--- a/praticando/p007/desafios-frame/desafios/d006/index.html
+++ b/praticando/p007/desafios-frame/desafios/d006/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tags HTML</title>
+    <style>
+        ::-webkit-scrollbar{
+            height: 0px;
+            width: 0px;
+        }
+        body{
+            background-color: white;
+        }
+    </style>
     </head>
 <body>
     <h1>Tags em HTML</h1>
