--- a/praticando/p007/index.html
+++ b/praticando/p007/index.html
@@ -17,9 +17,9 @@
             <br>
             <abbr title="Trabalhos"><a href="paginas-extra/trabalhos.html" target="iframe"><img src="imagens/papel-icone-feito.png" alt="icone-papel" class="icone"></a></abbr>
             <br>
-            <abbr title="Músicas"><img src="imagens/musica-icone-feito.png" alt="icone-musica" class="icone"></abbr>
+            <abbr title="Músicas"><a href="paginas-extra/musicas.html" target="iframe"><img src="imagens/musica-icone-feito.png" alt="icone-musica" class="icone"></a></abbr>
             <br>
-            <abbr title="Jogos"><img src="imagens/jogo-icone-feito.png" alt="icone-jogo" class="icone"></abbr>
+            <abbr title="Jogos"><a href="paginas-extra/jogos.html" target="iframe"><img src="imagens/jogo-icone-feito.png" alt="icone-jogo" class="icone"></a></abbr>
         
         </div>
     <div id="frame">
