--- a/praticando/p007/paginas-extra/jogos.html
+++ b/praticando/p007/paginas-extra/jogos.html
@@ -42,6 +42,7 @@
                 </p>
                 <img src="../imagens-jogos/lol.jpg" alt="" id="img6">
             </aside>
+            <div class="controle"><img src="../imagens-jogos/controle.png" alt="controle"></div>
         </section>
     </main>
 </body>
