--- a/praticando/p007/paginas-extra/login.html
+++ b/praticando/p007/paginas-extra/login.html
@@ -9,7 +9,37 @@
     <link rel="stylesheet" href="../paginas-extra-estilos/login.css">
 </head>
 <body>
-    <div class="honeycomb">
+    <div class="logo">
+        <img src="../imagens/logo-honeycomb.png" alt="logo honey">
+    </div>
+    <article>
+        <aside class="login">
+            <form action="../cadastro.php">
+                <div>
+                    <label for="iuser">Usuário: </label><input type="text" name="user" id="iuser" required placeholder="Username">
+                    <br>
+                    <label for="isenha">Senha: </label><input type="password" name="
+                    senha" id="isenha" required placeholder="Password">
+                </div>
+                <div>
+                    <input type="submit" value="Enviar" class="submit">
+                    <input type="reset" value="Limpar" class="submit">
+                </div>
+            </form>
+            <div class="separacao">
+                <img src="../imagens/divisoria.png" alt="">
+            </div>
+            <div class="cadastro">
+                <p>Não tem conta? Então</p>
+                <p><a href="#">Cadastre-se</a></p>
+
+            </div>
+        </aside>
+        <aside>
+
+        </aside>
+    </article>
+    <!--<div class="honeycomb">
         <h1>HONEYCOMB</h1>
     </div>
     
@@ -45,6 +75,6 @@
     </article>
     <article class="assinatura-login">
         
-    </article>
+    </article>-->
 </body>
 </html>
