--- a/praticando/p007/paginas-extra/login.html
+++ b/praticando/p007/paginas-extra/login.html
@@ -35,10 +35,13 @@
 
             </div>
         </aside>
-        <aside>
-
-        </aside>
     </article>
+    <div class="hex1">
+        <img src="../imagens/hex1.gif" alt="hex1">
+    </div>
+    <div class="hex2">
+        <img src="../imagens/hex2.gif" alt="hex2">
+    </div>
     <!--<div class="honeycomb">
         <h1>HONEYCOMB</h1>
     </div>
