--- a/praticando/p007/index.html
+++ b/praticando/p007/index.html
@@ -23,7 +23,7 @@
         
         </div>
     <div id="frame">
-        <iframe src="paginas-extra/login.html" frameborder="0" name="iframe">Seu navegador não é compatível com iframe</iframe>
+        <iframe src="paginas-extra/logo.html" frameborder="0" name="iframe">Seu navegador não é compatível com iframe</iframe>
     </div>
 </body>
 </html>
