--- a/praticando/p008/index.html
+++ b/praticando/p008/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/media-query.css">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="shortcut icon" href="./imagens/favicon.ico" type="image/x-icon">
     <title>Honeycomb</title>
 </head>
 <!--
@@ -33,13 +34,16 @@
             <img src="imagens/icone-seta-baixo.png" alt="seta para baixo" id="seta" onclick="clickMenu()">
             <menu id="itens">
                 <ul>
-                    <li><img src="imagens/icone-pessoa-perfil.png" alt="ícone perfil"></li>
-                    <li><img src="imagens/icone-pessoas-timeline.png" alt="ícone timeline"></li>
-                    <li><img src="imagens/icone-pasta-repositorio.png" alt="ícone trabalhos"></li>
-                    <li><img src="imagens/icone-musica-audioteca.png" alt="ícone audioteca"></li>
-                    <li><img src="imagens/icone-game-arcade.png" alt="ícone games"></li>
+                    <li><a href=""><img src="imagens/icone-pessoa-perfil.png" alt="ícone perfil"></a></li>
+                    <li><a href=""><img src="imagens/icone-pessoas-timeline.png" alt="ícone timeline"></a></li>
+                    <li><a href=""><img src="imagens/icone-pasta-repositorio.png" alt="ícone trabalhos"></a></li>
+                    <li><a href=""><img src="imagens/icone-musica-audioteca.png" alt="ícone audioteca"></a></li>
+                    <li><a href=""><img src="imagens/icone-game-arcade.png" alt="ícone games"></a></li>
                 </ul>
             </menu>
+        </div>
+        <div id="frame">
+            <iframe src="./index.html" frameborder="0"></iframe>
         </div>
     <main>
 
