--- a/praticando/p008/index.html
+++ b/praticando/p008/index.html
@@ -43,7 +43,7 @@
             </menu>
         </div>
         <div id="frame">
-            <iframe src="./index.html" frameborder="0"></iframe>
+            <iframe src="./paginas-extra/login.html" frameborder="0"></iframe>
         </div>
     <main>
 
