--- a/praticando/p008/paginas-extra/login.html
+++ b/praticando/p008/paginas-extra/login.html
@@ -14,13 +14,19 @@
         <form action="cadastro.php" method="post">
             <section id="login">
                 <section id="dados"></section>
-                <label for="nomeusuario">Username<input type="text" id="nomeusuario"></label><br>
-                <label for="senha">Password<input type="password"></label>
+                <label for="nomeusuario"><input type="text" id="nomeusuario" placeholder="Username"></label><br>
+                <label for="senha"><input type="password" placeholder="Password"></label>
 
                 <section id="envio">
                     <label for="enviar"><input type="submit" id="enviar" value="Enviar"></label>
                     <label for="limpar"><input type="reset" id="limpar" value="Limpar"></label>
                 </section>
+                <p class="cadastro">
+                    <a href="#">Cadastre-se</a>
+                </p>
+                <p class="esqueci">
+                    <a href="#">Esqueci a senha</a>
+                </p>
             </section>
         </form>
     </main>
