--- a/praticando/p008/paginas-extra/login.html
+++ b/praticando/p008/paginas-extra/login.html
@@ -13,9 +13,10 @@
     <main>
         <form action="cadastro.php" method="post">
             <section id="login">
-                <section id="dados"></section>
+                <section id="dados">
                 <label for="nomeusuario"><input type="text" id="nomeusuario" placeholder="Username"></label><br>
                 <label for="senha"><input type="password" placeholder="Password"></label>
+            </section>
 
                 <section id="envio">
                     <label for="enviar"><input type="submit" id="enviar" value="Enviar"></label>
