--- a/praticando/p008/paginas-extra/login.html
+++ b/praticando/p008/paginas-extra/login.html
@@ -23,7 +23,7 @@
                     <label for="limpar"><input type="reset" id="limpar" value="Limpar"></label>
                 </section>
                 <p class="cadastro">
-                    <a href="#">Cadastre-se</a>
+                    <a href="./cadastro.html">Cadastre-se</a>
                 </p>
                 <p class="esqueci">
                     <a href="#">Esqueci a senha</a>
