--- a/praticando/p008/paginas-extra/cadastro.html
+++ b/praticando/p008/paginas-extra/cadastro.html
@@ -27,9 +27,9 @@
                 </article>
                 <article id="sexo">
                     <p>Gênero</p>
-                    <label for="ifem"><input type="radio" name="sexo" id="ifem">Feminino</label>
-                    <label for="imasc"><input type="radio" name="sexo" id="imasc">Masculino</input></label>
-                    <label for="inao"><input type="radio" name="sexo" id="inao">Outro</input></label>
+                    <input type="radio" name="sexo" id="ifem"><label for="ifem">Feminino</label>
+                    <input type="radio" name="sexo" id="imasc"></input><label for="imasc">Masculino</label>
+                    <input type="radio" name="sexo" id="inao"></input><label for="inao">Outro</label>
                 </article>
                 <article id="envio">
                     <input type="submit" id="ienvio" name="envio" value="Concluir">
