--- a/praticando/p008/paginas-extra/cadastro.html
+++ b/praticando/p008/paginas-extra/cadastro.html
@@ -13,7 +13,7 @@
         <section>
             <h1>Cadastre-se</h1>
             <h2>É rápido e fácil</h2>
-            <form action="../cadastro.php">
+            <form action="../cadastro.php" autocomplete="off">
                 <article id="dados-principais">
                     <input type="text" name="nome" id="nome" placeholder="Primeiro Nome" required>
                     <input type="text" name="sobrenome" id="sobrenome" placeholder="Sobrenome" required>
