--- a/praticando/p008/paginas-extra/cadastro.html
+++ b/praticando/p008/paginas-extra/cadastro.html
@@ -36,7 +36,7 @@
                     <input type="reset" id="ilimpa" name="limpar" value="Limpar">
                 </article>
             </form>
-            <p><a href="./login.html">Voltar para a página de login</a></p>
+            <p><a href="../index.html">Voltar para a página de login</a></p>
         </section>
     </main>
 </body>
