--- a/praticando/p008/index.html
+++ b/praticando/p008/index.html
@@ -34,7 +34,7 @@
             <img src="imagens/icone-seta-baixo.png" alt="seta para baixo" id="seta" onclick="clickMenu()">
             <menu id="itens">
                 <ul>
-                    <li><a href=""><img src="imagens/icone-pessoa-perfil.png" alt="ícone perfil"></a></li>
+                    <li><a href="./paginas-extra/login.html"><img src="imagens/icone-pessoa-perfil.png" alt="ícone perfil"></a></li>
                     <li><a href=""><img src="imagens/icone-pessoas-timeline.png" alt="ícone timeline"></a></li>
                     <li><a href=""><img src="imagens/icone-pasta-repositorio.png" alt="ícone trabalhos"></a></li>
                     <li><a href=""><img src="imagens/icone-musica-audioteca.png" alt="ícone audioteca"></a></li>
