--- a/praticando/p008/index.html
+++ b/praticando/p008/index.html
@@ -34,8 +34,8 @@
             <img src="imagens/icone-seta-baixo.png" alt="seta para baixo" id="seta" onclick="clickMenu()">
             <menu id="itens">
                 <ul>
-                    <li><a href="./paginas-extra/login.html"><img src="imagens/icone-pessoa-perfil.png" alt="ícone perfil"></a></li>
-                    <li><a href=""><img src="imagens/icone-pessoas-timeline.png" alt="ícone timeline"></a></li>
+                    <li><a href="./paginas-extra/login.html" target="iframe"><img src="imagens/icone-pessoa-perfil.png" alt="ícone perfil" ></a></li>
+                    <li><a href="./paginas-extra/social.html" target="iframe"><img src="imagens/icone-pessoas-timeline.png" alt="ícone timeline"></a></li>
                     <li><a href=""><img src="imagens/icone-pasta-repositorio.png" alt="ícone trabalhos"></a></li>
                     <li><a href=""><img src="imagens/icone-musica-audioteca.png" alt="ícone audioteca"></a></li>
                     <li><a href=""><img src="imagens/icone-game-arcade.png" alt="ícone games"></a></li>
@@ -43,7 +43,7 @@
             </menu>
         </div>
         <div id="frame">
-            <iframe src="./paginas-extra/login.html" frameborder="0"></iframe>
+            <iframe src="./paginas-extra/login.html" frameborder="0" name="iframe"></iframe>
         </div>
     <main>
 
