--- a/praticando/p008/index.html
+++ b/praticando/p008/index.html
@@ -37,7 +37,7 @@
                     <li><a href="./paginas-extra/login.html" target="iframe"><img src="imagens/icone-pessoa-perfil.png" alt="ícone perfil" ></a></li>
                     <li><a href="./paginas-extra/social.html" target="iframe"><img src="imagens/icone-pessoas-timeline.png" alt="ícone timeline"></a></li>
                     <li><a href="./paginas-extra/trabalhos.html" target="iframe"><img src="imagens/icone-pasta-repositorio.png" alt="ícone trabalhos"></a></li>
-                    <li><a href=""><img src="imagens/icone-musica-audioteca.png" alt="ícone audioteca"></a></li>
+                    <li><a href="./paginas-extra/musicas.html" target="iframe"><img src="imagens/icone-musica-audioteca.png" alt="ícone audioteca"></a></li>
                     <li><a href=""><img src="imagens/icone-game-arcade.png" alt="ícone games"></a></li>
                 </ul>
             </menu>
