--- a/praticando/p013/princidex.html
+++ b/praticando/p013/princidex.html
@@ -13,15 +13,36 @@
 
 <body>
     <header>
-        <div class="hole"><div class="basket_ball"></div></div>
-        <div class="img_site"><picture><img src="./img/logo" alt="logo_site"></picture></div>
+        <div class="hole"><div class="basketball"></div></div>
+        <div class="img_site"><picture><img class="logo" src="./img/logo" alt="logo_site"></picture></div>
     </header>
     <main>
         <ul>
-            <li>    <div><picture><img src="./img/image1" alt="img_site"></picture></div> <div><p>ESTÁ PREPARADO PARA O MAIOR <SPAN>DESAFIO</SPAN> DA SUA VIDA?!?!</p></div> </li>
-            <li>    <div><picture><img src="./img/image2" alt="img_site"></picture></div> <div><p>NOS MOSTRE A QUANTIDADE DE CESTAS QUE CONSEGUE FAZER EM UM MINUTO. E PROVE PARA SI EMSMO QUE É UM VENCEDOR!!</p></div> </li>
+            <li id="li1">    
+                <div>
+                    <picture>
+                        <img class="image_body" src="./img/image1" alt="img_site">
+                    </picture>
+                </div>
+
+                 <div id="txt">
+                    <p class="texto1">ESTÁ PREPARADO PARA O MAIOR <SPAN>DESAFIO</SPAN> DA SUA VIDA?!?!</p>
+                </div>
+             </li>
+
+
+            <li id="li2">    
+                <div>
+                    <picture>
+                        <img class="image_body" src="./img/image2" alt="img_site">
+                    </picture>
+                </div>
+                 <div id="txt">
+                    <p class="texto2">NOS MOSTRE A QUANTIDADE DE CESTAS QUE CONSEGUE FAZER EM UM MINUTO. E PROVE PARA SI EMSMO QUE É UM VENCEDOR!!</p>
+                </div> 
+            </li>
         </ul>
-        <div><a href="#">JOGAR</a></div>
+        <div class="button"><a href="./index.html" target="_blank"><img src="./img/icon_play" alt="botao_play"></a></div>
     </main>
 
     <!-- Rodapé -->
