--- a/praticando/p013/princidex.html
+++ b/praticando/p013/princidex.html
@@ -57,7 +57,7 @@
             
             <div class="social">
                 <img src="./img/icon_mail.png" alt="icone_mail">
-                <p>l.carrion@uni9.edu</p>
+                <p>l.carrion@uni9.edu.br</p>
             </div>
 
             <div class="social">
