--- a/praticando/p013/princidex.html
+++ b/praticando/p013/princidex.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="hole"><div class="basketball"></div></div>
-        <div class="img_site"><picture><img class="logo" src="./img/logo" alt="logo_site"></picture></div>
+        <div class="img_site"><picture><img class="logo" src="./img/basknove_logo" alt="logo_site"></picture></div>
     </header>
     <main>
         <ul>
@@ -38,7 +38,7 @@
                     </picture>
                 </div>
                  <div id="txt">
-                    <p class="texto2">NOS MOSTRE A QUANTIDADE DE CESTAS QUE CONSEGUE FAZER EM UM MINUTO. E PROVE PARA SI EMSMO QUE É UM VENCEDOR!!</p>
+                    <p class="texto2">NOS MOSTRE A QUANTIDADE DE CESTAS QUE CONSEGUE FAZER EM UM MINUTO. E PROVE PARA SI MESMO QUE É UM VENCEDOR!!</p>
                 </div> 
             </li>
         </ul>
